# cloudwire

./: .gitignore  CHANGELOG.md  CODEBASE_DEEP_DIVE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml
backend/: requirements.txt
backend/app/: __init__.py  graph_store.py  main.py  models.py  scan_jobs.py  scanner.py
cloudwire/: __init__.py  cli.py
cloudwire/app/: graph_store.py  main.py  models.py  scanner.py  services.py  xray_scanner.py
cloudwire/app/cost/: ce_client.py  enricher.py
cloudwire/app/scanners/: __init__.py  _utils.py  apigateway.py  appsync.py  cloudfront.py  cognito.py  dynamodb.py  ec2.py  ecs.py  elasticache.py  eventbridge.py  glue.py  iam.py  kinesis.py  lambda_.py  rds.py  redshift.py  route53.py  s3.py  sns.py  sqs.py  stepfunctions.py  vpc.py
docs/: FEATURES.md  RELEASING.md  USAGE.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ErrorBoundary.jsx
frontend/src/components/graph/: GraphCanvas.jsx  GraphEdge.jsx  GraphLegend.jsx  GraphNode.jsx  Minimap.jsx  TracePanel.jsx
frontend/src/components/layout/: InspectorPanel.jsx  LayoutDropdown.jsx  ServiceSidebar.jsx  TagFilterBar.jsx  TopBar.jsx  WarningsPanel.jsx  XRayFilterBar.jsx
frontend/src/hooks/: useGraphPipeline.js  useGraphViewport.js  usePathFinder.js  useScanPolling.js  useTagDiscovery.js  useXRayFilters.js  useXRayPolling.js
frontend/src/lib/: graphTransforms.js  serviceVisuals.jsx
frontend/src/lib/graph/: annotations.js
frontend/src/pages/: CloudWirePage.jsx
frontend/src/styles/: graph.css
