[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudwire"
version = "0.2.9"
description = "Scan and visualize your AWS infrastructure as an interactive graph"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["aws", "cloud", "visualization", "graph", "infrastructure"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Systems Administration",
]
[project.optional-dependencies]
dev = ["twine", "build", "ruff>=0.4", "mypy>=1.0"]

dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "boto3>=1.26",
    "botocore>=1.29",
    "networkx>=2.6",
    "pydantic>=2.0",
    "click>=8.0",
    "python-multipart>=0.0.5",
    "python-hcl2>=4.3",
]

[project.scripts]
cloudwire = "cloudwire.cli:main"

[project.urls]
Homepage = "https://github.com/Himanshu-370/cloudwire"
Issues = "https://github.com/Himanshu-370/cloudwire/issues"
Changelog = "https://github.com/Himanshu-370/cloudwire/blob/main/CHANGELOG.md"
Documentation = "https://github.com/Himanshu-370/cloudwire/blob/main/docs/USAGE.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["cloudwire*"]

[tool.setuptools.package-data]
cloudwire = ["static/**/*", "static/*"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["cloudwire"]
